# test-deepstream

./: .gitignore  CMakeLists.txt  README.md  build_tensorrt.sh  camera_config.ini  deepstream_optflow.cpp  instrusion_detector copy.cpp  instrusion_detector.cpp  msgconv_config.txt  msgconv_sample_config.txt  nvinfer_config.txt  nvtracker_config.txt  test3.cpp  test_kafka.py
instrusion_plugin/: CMakeLists.txt  gstnvdszonefilter.cpp  gstnvdszonefilter.h  nvdszonefilter_property_parser.cpp
nvdsimagesaver_plugin/: CMakeLists.txt  bbox_draw.cpp  bbox_draw.h  bbox_draw_kernels.cu  bbox_draw_kernels.cuh  gstnvdsimagesaver copy.cpp  gstnvdsimagesaver copy.h  gstnvdsimagesaver.cpp  gstnvdsimagesaver.h
nvdskafka_plugin/: CMakeLists.txt  gstnvdskafka.cpp  gstnvdskafka.h
nvdszonefilter_plugin/: gstnvdszonefilter.cpp  gstnvdszonefilter.h  nvdszonefilter_property_parser.h
